CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(LIB_NAME opcua)

SET(SPECIAL_LIB_DEFINES  -DPLT_USE_WINSOCK2=1 -DUA_EXTERNAL_NAMESPACES=1 -DLOG_KS=0 -DLOG_KS_ERROR=1 -DLOG_KS_WARNING=1 -DLOG_KS_INFO=0 -DSTATIC_LINKING=1 -DLOG_UA=1 -DLOG_UA_TO_OV=1 -DDEBUG=1 -DUA_DYNAMIC_LINKING_EXPORT -DUA_DYNAMIC_LINKING -Dov_library_open_${LIB_NAME}=ov_library_open_${LIB_NAME}_old)

################ GENERIC PART #################################
SET(OV_SRC ${CMAKE_CURRENT_BINARY_DIR}/ov.c)

SET(LIB_ROOT ${CMAKE_CURRENT_LIST_DIR})
SET(LIB_INC_DIR ${LIB_ROOT}/include)
SET(LIB_SRC_DIR ${LIB_ROOT}/source)
SET(LIB_MODEL_DIR ${LIB_ROOT}/model)

SET(KSBASE_SRC ${CMAKE_CURRENT_BINARY_DIR}/ksbase.c)

file(GLOB LIB_SRC "${LIB_SRC_DIR}/*.c")

SET(LIB_GEN_SRC ${LIB_NAME}.c ${LIB_NAME}.h)
SET(LIB_MODEL_FILE ${LIB_MODEL_DIR}/${LIB_NAME}.ovm)

INCLUDE_DIRECTORIES(${OV_INCLUDE_DIR} ${OV_MODEL_DIR} ${KSBASE_INCLUDE_DIR} ${KSBASE_MODEL_DIR} ${LIB_INC_DIR} ${LIB_MODEL_DIR} ${CMAKE_CURRENT_BINARY_DIR})

SET(GENERIC_LIB_DEFINES -DOV_DEBUG -DOV_COMPILE_LIBRARY_${LIB_NAME})
SET(LIB_DEFINES ${SPECIAL_LIB_DEFINES} ${GENERIC_LIB_DEFINES})

############### Generate model files ###############################
ADD_CUSTOM_COMMAND(OUTPUT ${OV_SRC}
	COMMAND $<TARGET_FILE:ov_codegen> -I ${OV_MODEL_DIR} -f ${OV_MODEL_FILE} -o ${CMAKE_CURRENT_BINARY_DIR} -l ov
    DEPENDS ${OV_MODEL})
    
ADD_CUSTOM_COMMAND(OUTPUT ${KSBASE_SRC}
    COMMAND $<TARGET_FILE:ov_codegen> -I ${OV_MODEL_DIR} -f ${KSBASE_MODEL_FILE} -o ${CMAKE_CURRENT_BINARY_DIR} -l ksbase
	DEPENDS ${KSBASE_MODEL})

ADD_CUSTOM_COMMAND(OUTPUT ${LIB_GEN_SRC}
	COMMAND $<TARGET_FILE:ov_codegen> -I ${OV_MODEL_DIR} -I ${KSBASE_MODEL_DIR} -f ${LIB_MODEL_FILE} -o ${CMAKE_CURRENT_BINARY_DIR} -l ${LIB_NAME}
    DEPENDS ${LIB_MODEL})
    
################ Generate the library ################################
ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC} ${OV_SRC} ${KSBASE_SRC} ${LIB_GEN_SRC} ${OV_MODEL} ${LIB_MODEL})
TARGET_LINK_LIBRARIES(${LIB_NAME} libov ws2_32 ksbase)
TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE ${OV_DEFINES} ${LIB_DEFINES})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "")

# Has no purpose for the build but adds the modelling files to the solution
SET(MODEL_FILES		${LIB_MODEL_DIR}/${LIB_NAME}.ovt
					${LIB_MODEL_DIR}/${LIB_NAME}.ovm
					${LIB_MODEL_DIR}/${LIB_NAME}.ovf)
ADD_CUSTOM_TARGET(${LIB_NAME}_Model SOURCES ${MODEL_FILES})

###################### Installation part for system library ########################

# Install the DLL into the syslibs directory
INSTALL(TARGETS ${LIB_NAME}
	RUNTIME DESTINATION ${SYSLIB_INSTALL_DIR}
	LIBRARY DESTINATION ${SYSLIB_INSTALL_DIR})

# Install the model directory
INSTALL(FILES	${MODEL_FILES}
	DESTINATION ${DEV_INSTALL_DIR}/${LIB_NAME}/model)

INSTALL(DIRECTORY ${LIB_INC_DIR}
	DESTINATION ${DEV_INSTALL_DIR}/${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME}
	LIBRARY DESTINATION ${DEV_INSTALL_DIR}/${LIB_NAME}/lib
	RUNTIME DESTINATION ${DEV_INSTALL_DIR}/${LIB_NAME}/lib
	ARCHIVE DESTINATION ${DEV_INSTALL_DIR}/${LIB_NAME}/lib)