CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

MESSAGE("Processing codegen Source directory...")

INCLUDE(FindFLEX)
INCLUDE(FindBISON)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR} ${OV_INCLUDE_DIR})

SET(OV_CODEGEN_SRC  ov_codegen.c
                    ov_codegen.h                    
)

SET(LEXER_IN ${CMAKE_CURRENT_SOURCE_DIR}/ov_ovmscanner.lex)
SET(PARSER_IN ${CMAKE_CURRENT_SOURCE_DIR}/ov_ovmparser.y)

SET(LEXER_GENERATED ${CMAKE_CURRENT_LIST_DIR}/ov_ovmscanner.c)
SET(PARSER_GENERATED ${CMAKE_CURRENT_LIST_DIR}/ov_ovmparser.c)

BISON_TARGET(codegen_parser ${PARSER_IN} ${PARSER_GENERATED} COMPILE_FLAGS ${BISON_FLAGS})
FLEX_TARGET(codegen_scanner ${LEXER_IN} ${LEXER_GENERATED} COMPILE_FLAGS ${FLEX_FLAGS})
ADD_FLEX_BISON_DEPENDENCY(codegen_scanner codegen_parser)

ADD_EXECUTABLE(ov_codegen ${OV_CODEGEN_SRC} ${LEXER_GENERATED} ${PARSER_GENERATED})
TARGET_COMPILE_DEFINITIONS(ov_codegen PRIVATE ${OV_DEFINES})